--- a/views/layouts/index.handlebars
+++ b/views/layouts/index.handlebars
@@ -9,6 +9,6 @@
     <script src="/public/index.js"></script>
   </head>
   <body>
-    <h1>this is inside views</h1>
+    <h1>This is a chat platform.. inside layouts!</h1>
   </body>
 </html>
