--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,12 +3,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Insta Chattiness</title>
+    <title>Make Chat</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
     <script src="/public/index.js"></script>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css'></link>
+    <link href='/public/index.css' rel='stylesheet' type='text/css'></link>
   </head>
   <body>
-    <h1>this is inside views</h1>
+
+    <form class="username-form">
+      <input id="username-input" placeholder="Username"></input>
+      <button id="create-user-btn">Join Chat</button>
+    </form>
+
   </body>
 </html>
