--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,8 @@
         <h1 class="brand">Make Chat</h1>
         <div class="channels">
             <h2 class="channels-label">Channels</h2>
-            <div class="new-channel-form"><input id="new-channel-input" placeholder="New Channel" /><button id="new-channel-btn">Create</button></div>
+            <div class="new-channel-form"><input id="new-channel-input" placeholder="New Channel" />
+            <button id="new-channel-btn">Create</button></div>
             <div class="channel-current">General</div>
         </div>
         <h2>Online Users</h2>
@@ -34,7 +35,8 @@
               <h2>Messages</h2>
           </div>
           <div class="text-chat-divide"></div>
-          <div class="chat-box"><textarea id="chat-input" placeholder="Type a message"></textarea><button class="btn" id="send-chat-btn">Send</button></div>
+          <div class="chat-box"><textarea id="chat-input" placeholder="Type a message"></textarea>
+          <button class="btn" id="send-chat-btn">Send</button></div>
         </div>
       </div>
     </div>
